--- a/Patient Transport Migration/Views/Home/PatientInfo/_PatientDetails.cshtml
+++ b/Patient Transport Migration/Views/Home/PatientInfo/_PatientDetails.cshtml
@@ -8,6 +8,9 @@
         <dt>@Html.DisplayNameFor(p => p.PatientDetails.Geboortedatum)</dt>
         <dd>@Html.DisplayFor(p => p.PatientDetails.Geboortedatum)</dd>
 
+        <dt>@Html.DisplayNameFor(p => p.PatientDetails.Locatie.Omschrijving)</dt>
+        <dd>@Html.DisplayFor(p => p.PatientDetails.Locatie.Omschrijving)</dd>
+
         <dt>@Html.DisplayNameFor(p => p.PatientDetails.Kamer)</dt>
         <dd>@Html.DisplayFor(p => p.PatientDetails.Kamer)</dd>
 
