--- a/Patient Transport Migration/Views/Home/VerplegingOverzicht/_PatientenWachtend.cshtml
+++ b/Patient Transport Migration/Views/Home/VerplegingOverzicht/_PatientenWachtend.cshtml
@@ -16,7 +16,7 @@
             <td>@taak.DatumGemaakt</td>
             <td>@taak.Aanvraag.Patient.Naam()</td>
             <td>@taak.Aanvraag.Patient.Kamer - @taak.Aanvraag.Patient.BedNr</td>
-            <td>@taak.LocatieEind.Afdeling - @taak.LocatieEind.Kamer</td>
+            <td>@taak.LocatieEind.Omschrijving - @taak.LocatieEind.Kamer</td>
         </tr>
     }
 
