--- a/Patient Transport Migration/Views/Home/PatientInfo/_PatientMedischeAanvragen.cshtml
+++ b/Patient Transport Migration/Views/Home/PatientInfo/_PatientMedischeAanvragen.cshtml
@@ -36,7 +36,7 @@
                         }
                     @:</td>
                     @:<td>
-                        @:<button onclick="btnLoadAanvraagDetails(@taak.Aanvraag.Id)">Toon Aanvraag</button>
+                        <span class="glyphicon glyphicon-info-sign glyphicon-clickable" onclick="btnLoadAanvraagDetails(@taak.Aanvraag.Id)"> </span>
                     @:</td>
                 @:</tr>
             }
