--- a/Patient Transport Migration/Views/Home/VerplegingOverzicht/_PatientenInOrde.cshtml
+++ b/Patient Transport Migration/Views/Home/VerplegingOverzicht/_PatientenInOrde.cshtml
@@ -15,7 +15,7 @@
     foreach (var taak in Model.PatientVervoerTakenInOrde) {
         <tr>
             <td>@taak.DatumCompleet</td>
-            <td>@try { @taak.Aanvraag.Patient.Naam() } catch (Exception) { } </td>
+            <td>@try { @taak.Aanvraag.Patient.Naam } catch (Exception) { } </td>
             <td>@try { @taak.Aanvraag.Patient.Kamer } catch (Exception) { } - @try { @taak.Aanvraag.Patient.BedNr } catch (Exception) { }</td>
             <td>@try { Html.Raw(taak.LocatieStart.Omschrijving); Html.Raw(" - "); Html.Raw(taak.LocatieStart.Kamer); } catch (Exception) { }</td>
         </tr>
