--- a/Patient Transport Migration/Content/Css/Site.css
+++ b/Patient Transport Migration/Content/Css/Site.css
@@ -102,11 +102,10 @@ table.table-spacify td {
 }
 
 .glyphicon-clickable {
-    cursor: -webkit-grab;
-    cursor: -moz-grab;
-    cursor: grab;
+    cursor: pointer;
     padding-right: 0.2em;
     padding-left: 0.2em;
+    font-size: 1.2em;
 }
 
 .HogePrioriteit {
@@ -140,3 +139,8 @@ table.table-spacify td {
 textarea {
     border-width: 1px;
 }
+
+.panel-group {
+    border: 1px solid #000000;
+    padding: 0.2em;
+} 
